tests/compile-fail/unsupported_visibility.stderr
error: unsupported visibility
 --> tests/compile-fail/unsupported_visibility.rs:6:24
  |
6 | #[enum_tools(MIN(vis = "NONE"))]
  |                        ^^^^^^
